--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-theme: jekyll-theme-cayman
+# theme: jekyll-theme-cayman
+remote_theme: daattali/beautiful-jekyll
 title: Learntit
 description: Check out what I've learnt! 
