--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
-# theme: jekyll-theme-cayman
-remote_theme: mmistakes/minimal-mistakes
+theme: jekyll-theme-cayman
 title: Learntit
 description: Check out what I've learnt! 
