--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Learntit
-description: I'm a ML rookie. This page mainly focus on sharing computer science and data science knowledge.
+description: I'm a ML rookie. This page mainly focus on sharing computer science and data science knowledge. Join my [Slack Channel](https://join.slack.com/t/learntitworkspace/shared_invite/zt-vttodl2q-ETPgg701mRRcjnS7H7IXsQ)
