--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-cayman
 title: Learntit
 description: I'm a ML rookie. This page mainly focus on sharing computer science and data science knowledge.
+plugins:
+  - jemoji
+
+
